# Layer-wise-Probing-of-ESM-2-Embeddings-for-Protein-Localization-and-Secondary-Structure

./: README.md  environment.yml  pyproject.toml
configs/: cb513_probe.yaml  deeploc_baselines.yaml  deeploc_esm_layers.yaml
report/: forloop.sty  main.aux  main.bbl  main.blg  main.tex  references.bib
scripts/: analyze_report_results.py  download_or_prepare_data.py  evaluate_localization.py  evaluate_secondary_structure.py  extract_esm_embeddings.py  make_figures.py  summarize_results.py  train_localization_baseline.py  train_localization_probe.py  train_secondary_structure_baseline.py  train_secondary_structure_probe.py
slurm/: esm_embed.sbatch  train_probe.sbatch
src/esm_probe/: __init__.py  cli.py  config.py  constants.py
src/esm_probe/baselines/: __init__.py  secondary_structure.py
src/esm_probe/data/: __init__.py  datasets.py  deeploc.py  secondary_structure.py  validation.py
src/esm_probe/evaluation/: __init__.py  localization_metrics.py  reports.py  secondary_metrics.py  tensors.py
src/esm_probe/models/: __init__.py  baselines.py  esm_embedder.py  pooling.py  probes.py
src/esm_probe/training/: loops.py  losses.py  schedulers.py  seeds.py
src/esm_probe/utils/: io.py  logging.py  paths.py  slurm.py
src/esm_probe/visualization/: __init__.py  curves.py  figures.py
tests/: test_config.py  test_evaluation_tensors.py  test_metrics.py  test_pooling_shapes.py  test_secondary_baselines.py  test_splits_no_leakage.py
